1) update sponsor information 2) edit sponsor opportunity mail html tag and add Andrew Chen to bcc

--- a/app/views/static_pages/sponsors.html.erb
+++ b/app/views/static_pages/sponsors.html.erb
@@ -15,13 +15,19 @@
 <div id="smallSponsorRow" class="row sponsorsContent">
 	<div id="moreDetails" class="col-md-8">
 		<p><b><span class="small_title">We're sponsored by: </span></b><br />
-			<p><a href='http://www.studypool.com'><span class="small_title">Studypool</span></a>, a leader in online homework help.</p><br />
-				Studypool is a marketplace for academic questions. That means students can post assignments they need help on, and qualified tutors will answer them. The tutors bid on answering your question and you choose the one you like. We have helped over 1.2 million students in the US alone.</p>
+			<p><a href='http://uviewapts.com'><span class="small_title">University View</span></a></p><br />
+			Newly renovated, U\View is geared to maximize your ultimate, right-next-to-campus living experience. 
+			Voted Best Place to Live Off Campus four years in a row, and that was before our latest lifestyle upgrades. 
+			Start your day at BaseCamp's Quad Cafe at the pool cabanas and picnic area. Cruise to campus with on site shuttle service, 
+			or enjoy the scenic walking bridge for a quick hop to class. ESC is programmed from the inside out for your escape from the everyday. Plug in, or unplug at your pace. 
+			Game Pods, Social Study, Billiards, Foosball, Ping Pong and Large screen media lounge provide the proper place to chill. UFit invites you to work out 24/7 with brand new equipment, 
+			yoga studio and indoor / outdoor circuit fitness. Homes are fully furnished, tech savvy and wired for living in style. Dishwashers, flat screen TVs, private bathrooms for every roommate - it’s game on! 
+			You have arrived. Welcome to University View.</p>
 	</div>
 	<div class="col-md-4">
-		<%= link_to image_tag('studypool.png', :class=>"img-responsive", :size=>"200x200"), "http://www.studypool.com" %>
+		<%= link_to image_tag('the_view.png', :class=>"img-responsive", :size=>"200x200"), "http://uviewapts.com" %>
 	</div>
 </div>
 
 
-<p id = "sponsor_op"><b>For sponsorship opportunities, please email <a href="emailto:csacollegepark@gmail.com">csacollegepark@gmail.com</a>.</b></p>
+<p id = "sponsor_op"><b>For sponsorship opportunities, please email <a href="mailto:csacollegepark@gmail.com?bcc=Andrew92998@gmail.com&subject=Chinese%20Student%20Association(CSA)%20Sponsor%20Opportunity">csacollegepark@gmail.com</a>.</b></p>
